# GAIA-Benchmark-Agent

./: .gitignore  README.md  agents.py  app.py  managed_agent.ipynb  prompts.yaml  pyproject.toml  submission.py
tools/: final_answer.py  tools.py
